<resources>
    <string name="app_name">CountBook</string>
    <string name="create_count">Create</string>
    <string name="clear_all">Clear All</string>
    <string name="increase_count">+</string>
    <string name="decrease_count">-</string>
    <string name="change_settings">Settings</string>
    <string name="reset_count">Reset</string>
    <string name="change">Change</string>
    <string name="delete_count">Delete</string>
    <string name="name">Enter a name</string>
    <string name="num">Enter a number</string>
</resources>
